fixed due date on assigment 1: next Monday, not this Friday

--- a/slides/slides_11.Rmd
+++ b/slides/slides_11.Rmd
@@ -115,6 +115,10 @@ You will get stuck.
 
 Please also *answer* questions on our private StackOverflow.
 
+--
+
+If you need to email one of us, please email both of us. 
+
 ---
 
 # What we do with data
