--- a/assignments/ps1_2021.Rmd
+++ b/assignments/ps1_2021.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Problem set 1"
 author: "Your name here"
-date: "Due 10/1/2021 at 5pm"
+date: "Due Monday 10/4/2021 at 5pm"
 output: pdf_document
 ---
 
