--- a/assignments/ps1_2021.Rmd
+++ b/assignments/ps1_2021.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Problem set 1"
-author: "Your name here"
+author: "Siwei Dai"
 date: "Due Monday 10/4/2021 at 5pm"
 output: pdf_document
 ---
@@ -26,19 +26,36 @@ df <- read_csv(str_c(data_path, "yearly_county_pres_results_wide.csv"))
 **1a) Using this data, make a plot showing the Democratic vote share (vertical axis) in each year (horizontal axis). Draw a point for each year and connect them with a line.**
 
 ```{r}
-## replace this with your 1a plot code 
+plot1a <- ggplot(data = df, 
+                 mapping = aes(x = year, y = dem_vote_share)) +
+          geom_point() + 
+          geom_line() +
+          labs (x = 'Year', y = 'Democratic vote share')
+plot1a
 ```
 
 **1b) Make a plot showing the Democratic county share (vertical axis) in each year (horizontal axis).**
 
 ```{r}
-## replace this with your 1b plot code 
+plot1b <- ggplot(data = df, 
+                 mapping = aes(x = year, y = dem_county_share)) +
+          geom_point() + 
+          geom_line() +
+          labs (x = 'Year', y = 'Democratic county share')
+plot1b
 ```
 
 **1c) Now make a plot showing Democratic county share (vertical axis) and Democratic vote share (horizontal axis), again connecting the points with a line. (Hint: use `geom_path()`.) Label each point with the corresponding year. (Hint: use `geom_text()`.)** 
 
 ```{r}
 ## replace this with your 1c plot code 
+plot1c <- ggplot(data = df,
+                 mapping = aes(x = dem_vote_share, y = dem_county_share)) +
+          geom_point() +
+          geom_path() +
+          labs (x = 'Democratic vote share', y = 'Democratic county share') +
+          geom_text(aes(label = year))
+plot1c
 ```
 
 **Now load a different dataset, which is the same data organized differently:**
